--- a/style.css
+++ b/style.css
@@ -680,4 +680,10 @@ body {
     margin-top: 20px;
   }
 }
+
+@media (max-width: 479px) {
+  .line {
+    height: 100px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
