--- a/css/style.css
+++ b/css/style.css
@@ -796,6 +796,7 @@ body {
   .menu_link {
     font-size: 20px;
     margin: 10px 0px;
+    text-align: center
   }
   .hamburger {
     display: block;
