--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,9 @@ body {
           justify-content: space-between;
   list-style: none;
 }
-
+.header-menu .menu-link{
+  text-align: center;
+}
 .header-menu .menu-link a {
   font-style: normal;
   font-weight: normal;
@@ -796,7 +798,6 @@ body {
   .menu_link {
     font-size: 20px;
     margin: 10px 0px;
-    text-align: center
   }
   .hamburger {
     display: block;
@@ -836,6 +837,7 @@ body {
     -ms-flex-pack: distribute;
         justify-content: space-around;
   }
+  
   .header-content .title {
     font-size: 26px;
   }
