--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,7 @@ body {
 
 .about .row-container__text {
   margin-top: 34px;
+  margin-bottom: 10px;
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
